--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ server.tomcat.accesslog.directory=logs
 server.tomcat.accesslog.suffix=.log
 server.tomcat.accesslog.prefix=access_log
 server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
-server.tomcat.accesslog.pattern=%{Forwarded}i %{X-Forwarded-For}i %{X-Forwarded-Proto}i %{host}i %l %u %t "%r" %s %b
+server.tomcat.accesslog.pattern=%{X-Forwarded-For}i %{X-Forwarded-Proto}i %{Forwarded}i %{X-Forwarded-Host}i %{X-Forwarded-Ssl}i %{host}i %l %u %t "%r" %s %b
 server.forward-headers-strategy=FRAMEWORK
 server.tomcat.remoteip.remote-ip-header=X-forwarded-form
